tests/baselines/reference/ambientConstLiterals.errors.txt
ambientConstLiterals.ts(20,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '"abc" | "def"'.
ambientConstLiterals.ts(21,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'number' or '123 | 456'.


==== ambientConstLiterals.ts (2 errors) ====
    function f<T>(x: T): T {
        return x;
    }
    
    enum E { A, B, C, "non identifier" }
    
    const c1 = "abc";
    const c2 = 123;
    const c3 = c1;
    const c4 = c2;
    const c5 = f(123);
    const c6 = f(-123);
    const c7 = true;
    const c8 = E.A;
    const c8b = E["non identifier"];
    const c9 = { x: "abc" };
    const c10 = [123];
    const c11 = "abc" + "def";
    const c12 = 123 + 456;
    const c13 = Math.random() > 0.5 ? "abc" : "def";
          ~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string' or '"abc" | "def"'.
    const c14 = Math.random() > 0.5 ? 123 : 456;
          ~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'number' or '123 | 456'.